--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,12 +10,15 @@ distlib==0.3.9
 Django==4.2.20
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+dnspython==2.7.0
 filelock==3.18.0
 flake8==7.2.0
 flatbuffers==25.2.10
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.71.0
+gunicorn==23.0.0
 h5py==3.13.0
 identify==2.6.10
 idna==3.10
@@ -46,6 +49,8 @@ protobuf==5.29.4
 pycodestyle==2.13.0
 pyflakes==3.3.2
 Pygments==2.19.1
+PyJWT==2.9.0
+pymongo==4.12.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
