--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,6 +43,7 @@ packaging==24.2
 pandas==2.2.3
 pathspec==0.12.1
 pickle5==0.0.11
+pip-autoremove==0.10.0
 platformdirs==4.3.7
 pre_commit==4.2.0
 protobuf==5.29.4
@@ -50,7 +51,7 @@ pycodestyle==2.13.0
 pyflakes==3.3.2
 Pygments==2.19.1
 PyJWT==2.9.0
-pymongo==4.12.0
+pymongo==4.12.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
