--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,6 +53,7 @@ Pygments==2.19.1
 PyJWT==2.9.0
 pymongo==4.12.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
