--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -13,12 +13,15 @@ repos:
     hooks:
     -   id: black
         language_version: python3.11
-        args: ["--line-length=79"]
+        args: ["--line-length=88"]
 -   repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
     -   id: isort
+        args: [ "--profile=black", "--line-length=88" ]
 -   repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
     -   id: flake8
+        exclude: ^.*migrations/.*$
+        args: ["--max-line-length=88"]
