--- a/frontend/frontend-diploma/package.json
+++ b/frontend/frontend-diploma/package.json
@@ -14,9 +14,11 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2"
   },
