--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,14 @@ absl-py==2.2.1
 asgiref==3.8.1
 astunparse==1.6.3
 black==25.1.0
+catboost==1.2.8
+category-encoders==2.6.4
 certifi==2025.1.31
 cfgv==3.4.0
 charset-normalizer==3.4.1
 click==8.1.8
+contourpy==1.3.0
+cycler==0.12.1
 distlib==0.3.9
 Django==4.2.20
 django-cors-headers==4.7.0
@@ -15,26 +19,32 @@ dnspython==2.7.0
 filelock==3.18.0
 flake8==7.2.0
 flatbuffers==25.2.10
+fonttools==4.58.0
 gast==0.6.0
 google-pasta==0.2.0
+graphviz==0.20.3
 grpcio==1.71.0
 gunicorn==23.0.0
 h5py==3.13.0
 identify==2.6.10
 idna==3.10
 importlib_metadata==8.6.1
+importlib_resources==6.5.2
 isort==6.0.1
 joblib==1.4.2
 keras==3.9.1
+kiwisolver==1.4.7
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.4
 mccabe==0.7.0
 mdurl==0.1.2
 ml_dtypes==0.5.1
 mypy_extensions==1.1.0
 namex==0.0.8
+narwhals==1.39.1
 nodeenv==1.9.1
 numpy==2.0.2
 opt_einsum==3.4.0
@@ -42,9 +52,12 @@ optree==0.14.1
 packaging==24.2
 pandas==2.2.3
 pathspec==0.12.1
+patsy==1.0.1
 pickle5==0.0.11
+pillow==11.2.1
 pip-autoremove==0.10.0
 platformdirs==4.3.7
+plotly==6.1.0
 pre_commit==4.2.0
 protobuf==5.29.4
 pycodestyle==2.13.0
@@ -52,6 +65,7 @@ pyflakes==3.3.2
 Pygments==2.19.1
 PyJWT==2.9.0
 pymongo==4.12.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
@@ -63,6 +77,7 @@ scipy==1.13.1
 six==1.17.0
 sklearn==0.0
 sqlparse==0.5.3
+statsmodels==0.14.4
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
