--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,21 @@
 absl-py==2.2.1
+amqp==5.3.1
 asgiref==3.8.1
 astunparse==1.6.3
+async-timeout==5.0.1
+billiard==4.2.1
 black==25.1.0
 catboost==1.2.8
 category-encoders==2.6.4
+celery==5.5.2
 certifi==2025.1.31
 cfgv==3.4.0
 charset-normalizer==3.4.1
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloudpickle==3.1.1
 contourpy==1.3.0
 cycler==0.12.1
 distlib==0.3.9
@@ -19,6 +27,7 @@ dnspython==2.7.0
 filelock==3.18.0
 flake8==7.2.0
 flatbuffers==25.2.10
+flower==2.0.1
 fonttools==4.58.0
 gast==0.6.0
 google-pasta==0.2.0
@@ -26,6 +35,7 @@ graphviz==0.20.3
 grpcio==1.71.0
 gunicorn==23.0.0
 h5py==3.13.0
+humanize==4.12.3
 identify==2.6.10
 idna==3.10
 importlib_metadata==8.6.1
@@ -34,7 +44,9 @@ isort==6.0.1
 joblib==1.4.2
 keras==3.9.1
 kiwisolver==1.4.7
+kombu==5.5.3
 libclang==18.1.1
+llvmlite==0.43.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -46,6 +58,7 @@ mypy_extensions==1.1.0
 namex==0.0.8
 narwhals==1.39.1
 nodeenv==1.9.1
+numba==0.60.0
 numpy==2.0.2
 opt_einsum==3.4.0
 optree==0.14.1
@@ -59,6 +72,8 @@ pip-autoremove==0.10.0
 platformdirs==4.3.7
 plotly==6.1.0
 pre_commit==4.2.0
+prometheus_client==0.22.0
+prompt_toolkit==3.0.51
 protobuf==5.29.4
 pycodestyle==2.13.0
 pyflakes==3.3.2
@@ -70,12 +85,15 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
+redis==6.1.0
 requests==2.32.3
 rich==14.0.0
 scikit-learn==1.6.1
 scipy==1.13.1
+shap==0.47.2
 six==1.17.0
 sklearn==0.0
+slicer==0.0.8
 sqlparse==0.5.3
 statsmodels==0.14.4
 tensorboard==2.19.0
@@ -85,10 +103,14 @@ tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 threadpoolctl==3.6.0
 tomli==2.2.1
+tornado==6.5
+tqdm==4.67.1
 typing_extensions==4.13.0
 tzdata==2025.2
 urllib3==2.3.0
+vine==5.1.0
 virtualenv==20.30.0
+wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
 zipp==3.21.0
