--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,5 +4,5 @@
 .DS_Store
 .idea/
 catboost_info/
-model_artifacts/catboostmodel.cbm
-model_artifacts/catboost_tempmodel.cbm
+#model_artifacts/catboostmodel.cbm
+#model_artifacts/catboost_tempmodel.cbm
