--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
-    -   id: check-added-large-files
+#    -   id: check-added-large-files
 -   repo: https://github.com/psf/black-pre-commit-mirror
     rev: 24.1.1
     hooks:
