--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
     ports:
       - "8080:8000"
     depends_on:
-      mongo:
-        condition: service_healthy
+      - mongo
+      - redis
     environment:
       - DEBUG=${DJANGO_DEBUG}
       - SECRET_KEY=${DJANGO_SECRET_KEY}
@@ -18,10 +18,21 @@ services:
       - PYTHONUNBUFFERED=1
     env_file:
       - .env
+  redis:
+    image: redis:alpine
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6378:6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   mongo:
     image: mongo:6
     ports:
-      - "27017:27017"
+      - "27018:27017"
     volumes:
       - mongo_data:/data/db
     environment:
@@ -39,5 +50,23 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A back worker --loglevel=info
+    volumes:
+      - ./:/app
+    depends_on:
+      - web
+      - redis
+    environment:
+      - DEBUG=${DJANGO_DEBUG}
+      - SECRET_KEY=${DJANGO_SECRET_KEY}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - PYTHONUNBUFFERED=1
+    env_file:
+        - .env
 volumes:
   mongo_data:
+  redis_data:
